Added hibernate support, sql files for the db tables, output of results to a daily csv file, writing of daily tickets to an AWS Mysql DB. Other minor bugs fixed for dealing with bad screenshots.

--- a/src/main/java/app.properties
+++ b/src/main/java/app.properties
@@ -1,7 +1,7 @@
 #Other Settings
 activities.writecsv=true
 activities.ocr.saveresponses=true
-
+activites.db.write=true
 
 
 #Directory stuff
@@ -18,8 +18,11 @@ cropping.endY=537
 #cropping.endY=925
 
 #Optical Character Recognition Settings
-ocr.apikey=0f42b4b0791940b5bc1c4b512e2d343b
+ocr.apikey=
 #"0f42b4b0791940b5bc1c4b512e2d343b"
 ocr.uri=https://westus.api.cognitive.microsoft.com/vision/v1.0
 ocr.lang=en
 #ocr.lang= 
+
+#database stuff
+db.guildname=Event Horizon
