--- a/pom.xml
+++ b/pom.xml
@@ -47,5 +47,15 @@
     	<artifactId>commons-io</artifactId>
     	<version>2.5</version>
     </dependency>
+    <dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>6.0.6</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.hibernate</groupId>
+    	<artifactId>hibernate-core</artifactId>
+    	<version>5.2.10.Final</version>
+    </dependency>
   </dependencies>
 </project>
