Quite a few updates including some DB actions

--- a/src/main/java/app.properties
+++ b/src/main/java/app.properties
@@ -2,7 +2,7 @@
 activities.writecsv=true
 activities.ocr.saveresponses=true
 activites.db.write=true
-
+activites.aws.writetobucket=true
 
 #Directory stuff
 rootdir=C:\\Google Drive\\SWGOH\\MEmu Download\\Screenshot\\
@@ -26,3 +26,6 @@ ocr.lang=en
 
 #database stuff
 db.guildname=Event Horizon
+
+#AWSS3 Stuff
+awss3.bucketname=swgohtickets2
