--- a/pom.xml
+++ b/pom.xml
@@ -57,5 +57,16 @@
     	<artifactId>hibernate-core</artifactId>
     	<version>5.2.10.Final</version>
     </dependency>
+    <dependency>
+    	<groupId>com.amazonaws</groupId>
+    	<artifactId>aws-java-sdk-bom</artifactId>
+    	<version>1.11.128</version>
+    	<type>pom</type>
+    </dependency>
+    <dependency>
+    	<groupId>com.amazonaws</groupId>
+    	<artifactId>aws-java-sdk-s3</artifactId>
+    	<version>1.11.128</version>
+    </dependency>
   </dependencies>
 </project>
