Latest updates.  I don't have the GUI working yet which i need to and need to get a central settings (with updates) module created.

--- a/src/main/java/site/swgoh/TicketTraker/gui/settings.properties
+++ b/src/main/java/site/swgoh/TicketTraker/gui/settings.properties
@@ -3,7 +3,7 @@
 #Misc Settings
 company.name=N/A
 window.width=500
-window.height=600
+window.height=400
 window.title=SWGOH Ticket Tracker Tool
 window.icon=src/main/java/SWGOH_icon20.jpg
 
@@ -14,7 +14,8 @@ processing.runimageprocess.button=Process Images
 processing.runimageprocess.button.mnemonic=R
 processing.runImageOCR.button=ProcessOCR
 processing.runImageOCR.button.mnemonic=O
-
+processing.runDBUpdate.button=Run DB Update
+processing.runDBUpdate.button.mnemonic=D
 
 #Panel 1
 panel1.label=Enter Data for Pool:
