Minor updates and fixes on file names.

--- a/src/main/java/app.properties
+++ b/src/main/java/app.properties
@@ -28,4 +28,5 @@ ocr.lang=en
 db.guildname=Event Horizon
 
 #AWSS3 Stuff
-awss3.bucketname=swgohtickets2
+#awss3.bucketname=swgohtickets2
+awss3.bucketname=swgoh-lambdainput
